syntax = "proto3";

package proto.operations;

message CreateRequest {
  string index = 1;
  string type = 2;
  string id = 3;
  string data = 4;
}

message CreateResponse {

}

message ReadRequest {
  string index = 1;
  string type = 2;
  string id = 3;
}

message ReadResponse {
  string result = 1;
}

message UpdateRequest {
  string index = 1;
  string type = 2;
	string id = 3;
	string data = 4;
}

message UpdateResponse {

}

message DeleteRequest {
  string index = 1;
  string type = 2;
	string id = 3;
}

message DeleteResponse {

}

message DeleteByQueryRequest {
  repeated string indexes = 1;
  repeated string types = 2;
  string term = 3;
  string category = 4;
  string url = 5;
  int64 depth = 6;
  string file_type = 7;
  int64 last_seen = 8;
}

message DeleteByQueryResponse {

}

message SearchRequest {
  string index = 1;
  string term = 2;
  int64 from = 3;
  int64 size = 4;
  string category = 5;
  string url = 6;
  int64 depth = 7;
  string type = 8;
  string file_type = 9;
  int64 last_seen = 10;
  string access = 11;
  string content_category = 12;
  bool no_kazoup_file_original = 13;
}

message SearchResponse {
  string result = 1;
  string info = 2;
}

message SearchByIdRequest {
  string index = 1;
  string type = 2;
  string id = 3;
}

message SearchByIdResponse {
  string result = 1;
}

message HealthRequest {
  string type = 1;
}

message HealthResponse {
  int64 status = 1;
  string info = 2;
}
